--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Data Parser</title>
     <style>
+        /* Styles for the page */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #1c1c1c;
@@ -14,8 +15,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             flex-direction: column;
+            height: 100vh;
+            overflow: auto;
         }
 
         h1 {
@@ -42,7 +44,32 @@
             font-size: 1rem;
             color: #fff;
             background-color: #333;
+            position: relative;
+            display: block;
             margin: 0 auto;
+        }
+
+        .content-type-box {
+            width: 90%;
+            max-width: 600px;
+            padding: 10px;
+            border-radius: 8px;
+            border: 2px solid #ddd;
+            background-color: #333;
+            color: #fff;
+            font-size: 1rem;
+            text-align: center;
+            margin-top: 20px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        .content-type-box p {
+            font-size: 1rem;
+            margin: 0;
+            padding: 10px;
+            background-color: #444;
+            border-radius: 5px;
         }
 
         input[type="submit"] {
@@ -53,7 +80,16 @@
             font-size: 1.1rem;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.2s;
             margin-top: 15px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
         }
 
         .encoded-data {
@@ -64,15 +100,136 @@
             border-radius: 10px;
             width: 90%;
             max-width: 600px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            color: #fff;
             display: none;
             text-align: center;
-            overflow: hidden;
         }
 
+        .encoded-data h2 {
+            color: #00FF00;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
+
+        pre {
+            background-color: #222;
+            padding: 15px;
+            border-radius: 8px;
+            font-size: 1.1rem;
+            word-wrap: break-word;
+            white-space: pre-wrap;
+            color: #fff;
+            text-align: center;
+        }
+
+        .error-popup, .success-popup {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            max-width: 90%;
+            font-size: 0.9rem;
+            white-space: nowrap;
+            text-align: center;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: none;
+            animation: popup 0.5s ease-out forwards;
+        }
+
+        .error-popup {
+            background-color: #FF4D4D;
+            color: white;
+        }
+
+        .success-popup {
+            background-color: #00FF00;
+            color: white;
+        }
+
+        /* Footer styles */
         .footer {
             margin-top: 50px;
             font-size: 1rem;
             color: #777;
+            width: 100%;
+            text-align: center;
+        }
+
+        .footer-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .created-by {
+            margin-bottom: 5px;
+            font-size: 1.5rem;
+            color: #00FF00;
+            font-weight: bold;
+        }
+
+        .moving-text {
+            position: absolute;
+            white-space: nowrap;
+            animation: moveText 20s linear infinite;
+            font-size: 1.5rem;
+            color: #00FF00;
+            font-weight: bold;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        @keyframes moveText {
+            0% {
+                left: 100%;
+            }
+            50% {
+                left: 50%;
+                transform: translateX(-50%);
+            }
+            100% {
+                left: -100%;
+            }
+        }
+
+        /* Media Queries for responsiveness */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            textarea {
+                width: 95%;
+            }
+
+            .footer-content {
+                font-size: 1rem;
+            }
+
+            .error-popup, .success-popup {
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            textarea {
+                width: 95%;
+                height: 150px;
+            }
+
+            input[type="submit"] {
+                font-size: 1rem;
+            }
+
+            .footer {
+                font-size: 0.9rem;
+            }
         }
     </style>
 </head>
@@ -81,78 +238,96 @@
     <form id="form" onsubmit="return parseFormData(event)">
         <label for="formData">Paste your raw form data:</label><br><br>
         <textarea name="formData" id="formData" placeholder="Paste your raw form data here... (including boundaries)"></textarea><br><br>
+        <div class="content-type-box">
+            <label for="formData">Copy required Content-Type:</label><br><br>
+            <p>Content-Type: application/x-www-form-urlencoded</p>
+            <p>Content-Type: application/x-www-form-urlencoded; charset=UTF-8</p>
+        </div>
         <input type="submit" value="Parse Data">
     </form>
     <div class="encoded-data" id="encodedData">
         <h2>Encoded Form Data:</h2>
         <pre id="encodedOutput"></pre>
     </div>
+    <div class="error-popup" id="errorPopup">Invalid form data!</div>
+    <div class="success-popup" id="successPopup">Data parsed successfully!</div>
     <div class="footer">
         <div class="footer-content">
             <span class="created-by">Created by: X I N</span>
         </div>
     </div>
+    <div class="footer">
+        <div class="footer-content">
+            <span class="moving-text">Telegram: https://t.me/posxinxin</span>
+        </div>
+    </div>
+    <div id="background-animations"></div>
 
     <script>
+        function generateAnimations() {
+            const container = document.getElementById('background-animations');
+            for (let i = 0; i < 100; i++) {
+                const randomPositionX = Math.random() * window.innerWidth;
+                const randomPositionY = Math.random() * window.innerHeight;
+                const animationDelay = Math.random() * 3 + 's';
+                const isBall = Math.random() < 0.5;
+                const element = document.createElement('div');
+                element.classList.add(isBall ? 'bouncing-ball' : 'bubble');
+                element.style.left = randomPositionX + 'px';
+                element.style.top = randomPositionY + 'px';
+                element.style.animationDelay = animationDelay;
+                container.appendChild(element);
+            }
+        }
+        generateAnimations();
+
         function parseFormData(event) {
             event.preventDefault();
 
             const rawData = document.getElementById("formData").value;
 
-            // Validate the raw data
             if (!isValidFormData(rawData)) {
-                alert("Invalid form data! Please ensure the data is in proper format.");
+                showErrorPopup();
                 return false;
             }
 
-            // Extract form data and encode it
             const parsedData = parseRawData(rawData);
+
             const urlEncodedData = encodeFormData(parsedData);
 
-            // Show the encoded data in the output box
             document.getElementById("encodedOutput").textContent = urlEncodedData;
             document.getElementById("encodedData").style.display = 'block';
+
+            showSuccessPopup();
         }
 
         function isValidFormData(data) {
-            return data.includes('Content-Disposition: form-data');
+            const requiredPattern = /Content-Disposition: form-data; name="([^"]+)"/;
+            return requiredPattern.test(data);
         }
 
         function parseRawData(data) {
             const entries = {};
-            const boundaryMatch = data.match(/boundary=(.*)/);
-            const boundary = boundaryMatch ? boundaryMatch[1] : null;
+            const cleanedData = data.replace(/--[\w\d-]+\s+/g, '').trim();
+            const lines = cleanedData.split("\n").map(line => line.trim()).filter(line => line.length > 0);
 
-            if (!boundary) {
-                alert('No boundary found in the form data.');
-                return {};
-            }
+            let fieldName = '';
+            let fieldValue = '';
+            let isName = true;
 
-            // Split the raw data using the boundary, remove extra parts
-            const parts = data.split(`--${boundary}`).filter(part => part.trim());
-
-            parts.forEach(part => {
-                const lines = part.split("\n").map(line => line.trim()).filter(line => line.length > 0);
-                let fieldName = '';
-                let fieldValue = '';
-
-                lines.forEach(line => {
-                    if (line.startsWith('Content-Disposition: form-data; name="')) {
-                        const nameMatch = line.match(/name="([^"]+)"/);
-                        if (nameMatch) {
-                            fieldName = nameMatch[1];
-                        }
-                    } else if (fieldName && !fieldValue) {
-                        // The first non-disposition line is the field value
-                        fieldValue = line;
+            for (const line of lines) {
+                if (line.startsWith('Content-Disposition: form-data; name="')) {
+                    const nameMatch = line.match(/name="([^"]+)"/);
+                    if (nameMatch) {
+                        fieldName = nameMatch[1];
+                        isName = false;
                     }
-                });
-
-                if (fieldName) {
+                } else if (!isName) {
+                    fieldValue = line.trim();
                     entries[fieldName] = fieldValue;
+                    isName = true;
                 }
-            });
-
+            }
             return entries;
         }
 
@@ -164,6 +339,16 @@
                 }
             }
             return encodedData.join('&');
+        }
+
+        function showErrorPopup() {
+            document.getElementById("errorPopup").style.display = 'block';
+            setTimeout(() => document.getElementById("errorPopup").style.display = 'none', 3000);
+        }
+
+        function showSuccessPopup() {
+            document.getElementById("successPopup").style.display = 'block';
+            setTimeout(() => document.getElementById("successPopup").style.display = 'none', 3000);
         }
     </script>
 </body>
